.ansible/files/kubernetes/04-deployment-backend.yml
# Módulo de Controle
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name apsso-controle-backend
  namespace: apsso
  labels: &selector
    apcode.com.br/app: apsso
    apcode.com.br/module: controle-backend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *selector
  template:
    metadata:
      labels:
        <<: *selector
    spec:
      containers:
        - name: *name
          image: ghcr.io/andrepenteado/apsso/controle-backend
          imagePullPolicy: Always
          resources:
            limits:
              memory: 1G
#              cpu: 8000m
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: github-secret
---
apiVersion: v1
kind: Service
metadata:
  name: apsso-controle-backend
  namespace: apsso
  labels: &selector
    apcode.com.br/app: apsso
    apcode.com.br/module: controle-backend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  type: LoadBalancer
  ports:
    - name: control-back
      port: 8080
      targetPort: 8080
  selector:
    <<: *selector

# Portal de Sistemas
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name apsso-portal-backend
  namespace: apsso
  labels: &selector
    apcode.com.br/app: apsso
    apcode.com.br/module: portal-backend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *selector
  template:
    metadata:
      labels:
        <<: *selector
    spec:
      containers:
        - name: *name
          image: ghcr.io/andrepenteado/apsso/portal-backend
          imagePullPolicy: Always
          resources:
            limits:
              memory: 1G
#              cpu: 8000m
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: github-secret
---
apiVersion: v1
kind: Service
metadata:
  name: apsso-portal-backend
  namespace: apsso
  labels: &selector
    apcode.com.br/app: apsso
    apcode.com.br/module: portal-backend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  type: LoadBalancer
  ports:
    - name: portal-back
      port: 8080
      targetPort: 8080
  selector:
    <<: *selector
