.ansible/files/kubernetes/04-deployment-frontend.yml
# Módulo de Controle
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name apsso-controle-frontend
  namespace: apsso
  labels: &selector
    apcode.com.br/app: apsso
    apcode.com.br/module: controle-frontend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *selector
  template:
    metadata:
      labels:
        <<: *selector
    spec:
      containers:
        - name: *name
          image: ghcr.io/andrepenteado/apsso/controle-frontend
          imagePullPolicy: Always
          resources:
            limits:
              memory: 1G
#              cpu: 8000m
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: github-secret
---
apiVersion: v1
kind: Service
metadata:
  name: apsso-controle-frontend
  namespace: apsso
  labels: &selector
    apcode.com.br/app: apsso
    apcode.com.br/module: controle-frontend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  type: LoadBalancer
  ports:
    - name: control-front
      port: 80
      targetPort: 80
  selector:
    <<: *selector

# Portal de Sistemas
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name apsso-portal-frontend
  namespace: apsso
  labels: &selector
    apcode.com.br/app: apsso
    apcode.com.br/module: portal-frontend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *selector
  template:
    metadata:
      labels:
        <<: *selector
    spec:
      containers:
        - name: *name
          image: ghcr.io/andrepenteado/apsso/portal-frontend
          imagePullPolicy: Always
          resources:
            limits:
              memory: 1G
#              cpu: 8000m
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: github-secret
---
apiVersion: v1
kind: Service
metadata:
  name: apsso-portal-frontend
  namespace: apsso
  labels: &selector
    apcode.com.br/app: apsso
    apcode.com.br/module: portal-frontend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  type: LoadBalancer
  ports:
    - name: portal-front
      port: 80
      targetPort: 80
  selector:
    <<: *selector

# Gestão de Equipes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name apsso-equipe-frontend
  namespace: apsso
  labels: &selector
    apcode.com.br/app: apsso
    apcode.com.br/module: equipe-frontend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *selector
  template:
    metadata:
      labels:
        <<: *selector
    spec:
      containers:
        - name: *name
          image: ghcr.io/andrepenteado/apsso/equipe-frontend
          imagePullPolicy: Always
          resources:
            limits:
              memory: 1G
          #              cpu: 8000m
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: github-secret
---
apiVersion: v1
kind: Service
metadata:
  name: apsso-equipe-frontend
  namespace: apsso
  labels: &selector
    apcode.com.br/app: apsso
    apcode.com.br/module: equipe-frontend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  type: LoadBalancer
  ports:
    - name: equipe-front
      port: 80
      targetPort: 80
  selector:
    <<: *selector
